src/Test/Fixtures/Good/TypeQualifier/linearScratchQubits.lf
let linear scratch qs: [qubit; 2] = qalloc(2);
