src/Test/Fixtures/Bad/TypeQualifier/missingArrayLengthInScratchTypedBinding.lf
let scratch qs: [qubit;] = qalloc(2);
